Closed
Bug 1468747
Opened 7 years ago
Closed 7 years ago
Crash in mozilla::gl::GLContext::InitWithPrefixImpl
Categories
(Core :: Graphics, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | + | fixed |
| firefox63 | --- | fixed |
People
(Reporter: lizzard, Assigned: jgilbert)
Details
(Keywords: crash, regression, topcrash, Whiteboard: [gfx-noted] [geckoview])
Crash Data
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
snorp
:
review+
lizzard
:
approval-mozilla-beta+
|
Details |
This bug was filed from the Socorro interface and is
report bp-f88352a7-0cff-464e-8844-cc9460180612.
=============================================================
This crash started showing up in the 20180611100107 nightly 62 build on Fennec at a fairly high volume for Nightly.
Top 10 frames of crashing thread:
0 libxul.so mozilla::gl::GLContext::InitWithPrefixImpl widget/android/AndroidBridge.h:148
1 libxul.so mozilla::gl::GLContext::InitWithPrefix gfx/gl/GLContext.cpp:347
2 libxul.so mozilla::gl::GLContextEGL::Init gfx/gl/GLContextProviderEGL.cpp:354
3 libxul.so mozilla::gl::GLContextEGL::CreateGLContext gfx/gl/GLContextProviderEGL.cpp:623
4 libxul.so mozilla::gl::GLContextEGL::CreateEGLPBufferOffscreenContext gfx/gl/GLContextProviderEGL.cpp:1095
5 libxul.so mozilla::gl::GLContextProviderEGL::CreateHeadless gfx/gl/GLContextProviderEGL.cpp:1116
6 libxul.so gfxPlatform::GetSkiaGLGlue gfx/thebes/gfxPlatform.cpp:1490
7 libxul.so mozilla::dom::CanvasRenderingContext2D::TrySkiaGLTarget dom/canvas/CanvasRenderingContext2D.cpp:1826
8 libxul.so mozilla::dom::CanvasRenderingContext2D::EnsureTarget dom/canvas/CanvasRenderingContext2D.cpp:1680
9 libxul.so mozilla::dom::CanvasRenderingContext2D::EnsureWritablePath dom/canvas/CanvasRenderingContext2D.cpp:3572
=============================================================
Updated•7 years ago
|
Component: Graphics: Layers → Graphics
Comment 1•7 years ago
|
||
This signature is 83% of all Android crashes on the June 13 Nightly.
Updated•7 years ago
|
Whiteboard: [gfx-noted]
| Reporter | ||
Comment 2•7 years ago
|
||
This is still a very high volume crash on fennec nightly from the early results from the June 18 build ( (20180615100304)
David, can you help find someone to investigate?
Flags: needinfo?(dbolter)
| Reporter | ||
Updated•7 years ago
|
tracking-firefox62:
--- → +
Comment 4•7 years ago
|
||
This is the top crash in FennecAndroid 62.0b3. Top crash device is LG-H990DS. 417 crashes/38 installs.
Keywords: topcrash
| Reporter | ||
Comment 5•7 years ago
|
||
Emailing Jeff, since this is still a top crash in 62 beta.
| Assignee | ||
Comment 7•7 years ago
|
||
Heeeey :snorp!
It's crashing here:
https://hg.mozilla.org/mozilla-central/annotate/4f6e597104dabedfecfafa2ab63dc79fd7f8bc7a/widget/android/AndroidBridge.h#l148
> L148 int GetAPIVersion() { return mAPIVersion; }
This is called here: (there are other calls to GetAPIVersion, but the crashes are coming from Adreno 3xx devices.
https://hg.mozilla.org/mozilla-central/annotate/4f6e597104dabedfecfafa2ab63dc79fd7f8bc7a/gfx/gl/GLContext.cpp#l943
> #ifdef MOZ_WIDGET_ANDROID
> if (mWorkAroundDriverBugs &&
> (Renderer() == GLRenderer::AdrenoTM305 ||
> Renderer() == GLRenderer::AdrenoTM320 ||
> Renderer() == GLRenderer::AdrenoTM330) &&
> AndroidBridge::Bridge()->GetAPIVersion() < 21) {
> // Bug 1164027. Driver crashes when functions such as
> // glTexImage2D fail due to virtual memory exhaustion.
> mTextureAllocCrashesOnMapFailure = true;
> }
> #endif
Is AndroidBridge::Bridge() not initialized yet at this point?
Flags: needinfo?(snorp)
| Assignee | ||
Comment 8•7 years ago
|
||
The good news is that this should stop in 63 with bug 1468801. (disable skiagl)
| Assignee | ||
Updated•7 years ago
|
(In reply to Jeff Gilbert [:jgilbert] from comment #7)
>
> Is AndroidBridge::Bridge() not initialized yet at this point?
We don't have it in the content process, so this crash likely came from Focus using GeckoView (we're working on getting the crash reports marked correctly).
You can use jni::GetAPIVersion() from widget/android/jni/Utils.h instead.
Flags: needinfo?(snorp)
(In reply to Jeff Gilbert [:jgilbert] from comment #8)
> The good news is that this should stop in 63 with bug 1468801. (disable
> skiagl)
Yeah, but WebGL will also have the same problem and we don't want to disable that :)
| Assignee | ||
Comment 11•7 years ago
|
||
(In reply to James Willcox (:snorp) (jwillcox@mozilla.com) from comment #10)
> (In reply to Jeff Gilbert [:jgilbert] from comment #8)
> > The good news is that this should stop in 63 with bug 1468801. (disable
> > skiagl)
>
> Yeah, but WebGL will also have the same problem and we don't want to disable
> that :)
Oh sure! I was thinking this was maybe a race-condition on AndroidBridge bring-up, which WebGL shouldn't ever have, but maybe content-skia-gl might or something. Regardless!
| Assignee | ||
Updated•7 years ago
|
| Comment hidden (mozreview-request) |
Comment 13•7 years ago
|
||
| mozreview-review | ||
Comment on attachment 8988636 [details]
Bug 1468747 - Replace AndroidBridge usage with jni::GetAPIVersion. -
https://reviewboard.mozilla.org/r/253870/#review260792
Attachment #8988636 -
Flags: review?(snorp) → review+
Comment 14•7 years ago
|
||
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d18f58b02696
Replace AndroidBridge usage with jni::GetAPIVersion. - r=snorp
Comment 15•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
| Assignee | ||
Comment 16•7 years ago
|
||
Comment on attachment 8988636 [details]
Bug 1468747 - Replace AndroidBridge usage with jni::GetAPIVersion. -
Approval Request Comment
[Feature/Bug causing the regression]: E10S on Android (GeckoView)
[User impact if declined]: Top-crash. No content-process gl (webgl) on GeckoView.
[Is this code covered by automated tests?]: No android e10s tests yet?
[Has the fix been verified in Nightly?]: No, suspected fix.
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: :snorp recommended it
[String changes made/needed]: none
Attachment #8988636 -
Flags: approval-mozilla-beta?
| Reporter | ||
Comment 17•7 years ago
|
||
Comment on attachment 8988636 [details]
Bug 1468747 - Replace AndroidBridge usage with jni::GetAPIVersion. -
Fix for a top crash in beta, let's take this for beta 5.
Attachment #8988636 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 18•7 years ago
|
||
| bugherder uplift | ||
Updated•7 years ago
|
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
| Reporter | ||
Updated•7 years ago
|
Whiteboard: [gfx-noted] → [gfx-noted] [geckoview]
Updated•7 years ago
|
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•