Bug 1468747 - Replace AndroidBridge usage with jni::GetAPIVersion. - r=snorp a=lizzard

MozReview-Commit-ID: F8BeEJzYxdn